# Spotify-Analysis

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
notebooks/: first_look.ipynb
src/spotify/: __init__.py  download_dataset.py
tests/: test_basic.py
