[project]
name = "spotify"
version = "0.1.0"
description = "Analysis of the Spotify 900k+ song dataset"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kagglehub>=0.3.12",
    "matplotlib>=3.10.0",
    "nbqa>=1.7.1",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "polars>=1.29.0",
    "pre-commit>=3.6.0",
    "pytest>=8.0.0",
    "ruff>=0.11.10",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "ydata-profiling>=4.16.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["spotify"]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "B", "W", "C4", "N", "UP", "PL", "RUF"]
ignore = []
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "spotify_env",
    "__pycache__",
    "build",
    "dist",
    "data",
]

[tool.ruff.isort]
known-first-party = ["spotify"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest]
testpaths = ["tests"]
